# funsearch_cvrp

./: .env.example  .gitignore  A.7z  AGENTS.md  CLAUDE.md  CS5491 AI Project (2).docx  CVRP_FunSearch_Proposal_ICLR24.tex  README.md  code.docx  config.ini  config.ini.example  cvrp_core.py  cvrp_spec.py  extract_docx.py  make_proposal.py  models.py  pyproject.toml  run_cvrp_funsearch.py  run_milestone.py  sample_efficient_search.py  test_llm.py  test_simple.py  test_with_a_data.py  update_proposal.py
colab/: funsearch_cvrp.ipynb
docs/: README.md
docs/dev/: README.md  make.bat
docs/proposal/: CVRP_FunSearch_Proposal.docx
docs/report/: iclr2024_conference.bib  iclr2024_conference.tex  report_latest.tex
funsearch_cvrp/cvrp/: baselines.py  io.py  search.py
funsearch_cvrp/llm/: __init__.py  interface.py
funsearch_cvrp/utils/: output_manager.py
generated_codes/: heuristic_iter00_score1552.242876721298.py  heuristic_iter01_score1437.5383720652455.py  heuristic_iter02_score1206.2241281376328.py
milestone_cvrp/: README.md  baselines.py  cvrp_core.py  cvrplib_io.py  export_report_detailed.py  export_report_docx.py  final_project_report.md  function_equivalence.py  generate_final_report.py  generate_heuristics.py  generate_report.py  generate_report_detailed.py  llm_interface.py  milestone_report.docx  milestone_report.md  milestone_report_detailed.docx  milestone_report_detailed.md  project_description.md  requirements.txt  run_full_project.py  run_milestone.py  sample_efficient_search.py  项目进展与后续计划.md
milestone_cvrp/outputs/: full_project_results.json  heuristics_results.json  (+5 more)
notebooks/: funsearch_cvrp.ipynb  solution_player.ipynb
outputs/: latest  latest_commit
report/: iclr2024_conference.aux  iclr2024_conference.fdb_latexmk  iclr2024_conference.fls  iclr2024_conference.out
reports/: generate_report.py  generate_report_detailed.py
scripts/: extract_generated_codes.py  generate_heuristics.py  list_results.py  test_llm.py  test_simple.py  test_with_a_data.py
specifications/: cvrp_spec.py  cvrp_spec_savings.py  specification_cvrp.txt  specification_nonsymmetric_admissible_set.txt
specs/: cvrp_spec.py
src/: __init__.py
tests/: code_manipulation_test.py  evaluator_test.py  funsearch_test.py  programs_database_test.py  test_data_loader.py  test_database_milestone.py  test_evaluator_history.py  test_output_manager.py  test_project.py  test_sampler_extraction.py
(+93 files in other folders)
